// Copyright 2022 Strims contributors
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package strims.profile.v1;

option go_package = "github.com/MemeLabs/strims/pkg/apis/profile/v1;profilev1";
option java_package = "gg.strims.profile.v1";
option swift_prefix = "SPF";

import "profile/v1/profile.proto";

message DeviceChangeEvent {
  Device device = 1;
}

message DeviceDeleteEvent {
  Device device = 1;
}
