// Copyright 2022 Strims contributors
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package strims.replication.v1;

option go_package = "github.com/MemeLabs/strims/pkg/apis/replication/v1;replicationv1";
option java_package = "gg.strims.replication.v1";
option swift_prefix = "SRE";

import "replication/v1/replication.proto";

message CheckpointChangeEvent {
  Checkpoint checkpoint = 1;
}

message CheckpointDeleteEvent {
  Checkpoint checkpoint = 1;
}
